// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonRemoveModal Component Credential offer decline renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Close"
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <
            height={115}
            width={115}
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "bold",
                },
                Object {
                  "fontSize": 28,
                },
              ]
            }
          >
            CredentialOffer.DeclineTitle
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
                Object {
                  "marginTop": 30,
                },
              ]
            }
          >
            CredentialOffer.DeclineParagraph1
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
              ]
            }
          >
            CredentialOffer.DeclineParagraph2
          </Text>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Remove"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Global.Remove
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Custom notification decline renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Close"
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <
            height={115}
            style={
              Object {
                "marginBottom": 15,
              }
            }
            width={115}
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "bold",
                },
                Object {
                  "fontSize": 28,
                },
              ]
            }
          >
            CredentialOffer.CustomOfferTitle
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
                Object {
                  "marginTop": 30,
                },
              ]
            }
          >
            CredentialOffer.CustomOfferParagraph1
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
              ]
            }
          >
            CredentialOffer.CustomOfferParagraph2
          </Text>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Remove"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Global.Remove
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Proof request decline renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Close"
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <
            height={115}
            width={115}
          />
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 25,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "bold",
                },
                Object {
                  "fontSize": 28,
                },
              ]
            }
          >
            ProofRequest.DeclineTitle
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
                Object {
                  "marginTop": 30,
                },
              ]
            }
          >
            ProofRequest.DeclineBulletPoint1
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
              ]
            }
          >
            ProofRequest.DeclineBulletPoint2
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                  "fontWeight": "normal",
                  "marginTop": 25,
                },
              ]
            }
          >
            ProofRequest.DeclineBulletPoint3
          </Text>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Remove"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Global.Remove
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Remove contact renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Close"
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        />
        <View>
          <View
            style={
              Array [
                Object {
                  "marginBottom": 25,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              ContactDetails.RemoveTitle
            </Text>
          </View>
          <View>
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "fontWeight": "400",
                  },
                ]
              }
            >
              ContactDetails.RemoveContactMessageTop
            </Text>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 18,
                      "fontWeight": "400",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint1
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 18,
                      "fontWeight": "400",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint2
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 18,
                      "fontWeight": "400",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint3
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 18,
                      "fontWeight": "400",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint4
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "fontWeight": "400",
                  },
                  Object {
                    "marginTop": 10,
                  },
                ]
              }
            >
              ContactDetails.RemoveContactMessageBottom
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="ContactDetails.RemoveContact"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              ContactDetails.RemoveContact
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Remove credential renders correctly 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Close"
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        />
        <View>
          <View
            style={
              Array [
                Object {
                  "marginBottom": 25,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              CredentialDetails.RemoveTitle
            </Text>
          </View>
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                ]
              }
            >
              CredentialDetails.RemoveCaption
            </Text>
          </View>
          <View
            style={
              Object {
                "marginTop": 25,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#313132",
                  "borderRadius": 5,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 15,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                CredentialDetails.YouWillNotLose
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 24,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <View
              collapsable={false}
              nativeID="animatedComponent"
              pointerEvents="auto"
              style={
                Object {
                  "height": 0,
                  "overflow": "hidden",
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                nativeID="animatedComponent"
                onLayout={[Function]}
                style={Object {}}
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderLeftColor": "#313132",
                        "borderLeftWidth": 2,
                        "marginTop": 10,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "display": "flex",
                          "flexDirection": "row",
                          "marginBottom": 5,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      •
                    </Text>
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      CredentialDetails.YouWillNotLoseListItem1
                    </Text>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "display": "flex",
                          "flexDirection": "row",
                          "marginBottom": 5,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      •
                    </Text>
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      CredentialDetails.YouWillNotLoseListItem2
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "marginTop": 25,
              }
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              nativeID="animatedComponent"
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#313132",
                  "borderRadius": 5,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "opacity": 1,
                  "padding": 15,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                CredentialDetails.HowToGetThisCredentialBack
              </Text>
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 24,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                
              </Text>
            </View>
            <View
              collapsable={false}
              nativeID="animatedComponent"
              pointerEvents="auto"
              style={
                Object {
                  "height": 0,
                  "overflow": "hidden",
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                nativeID="animatedComponent"
                onLayout={[Function]}
                style={Object {}}
              >
                <View
                  style={
                    Array [
                      Object {
                        "borderLeftColor": "#313132",
                        "borderLeftWidth": 2,
                        "marginTop": 10,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "display": "flex",
                          "flexDirection": "row",
                          "marginBottom": 5,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      •
                    </Text>
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "normal",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "paddingLeft": 5,
                          },
                        ]
                      }
                    >
                      CredentialDetails.HowToGetThisCredentialBackListItem1
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="CredentialDetails.RemoveCredential"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              CredentialDetails.RemoveFromWallet
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;

exports[`CommonRemoveModal Component Rerenders correctly when not visible 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#000000",
          "borderTopLeftRadius": 10,
          "borderTopRightRadius": 10,
          "height": 55,
          "marginTop": 65,
          "paddingRight": 20,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Close"
      accessible={true}
      collapsable={false}
      focusable={true}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="Close"
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 42,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <RNCSafeAreaView
    edges={
      Array [
        "left",
        "right",
        "bottom",
      ]
    }
    style={
      Array [
        Object {
          "backgroundColor": "#000000",
        },
      ]
    }
  >
    <RCTScrollView
      style={
        Array [
          Object {
            "backgroundColor": "#000000",
            "height": "100%",
            "padding": 20,
          },
        ]
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        />
        <View>
          <View
            style={
              Array [
                Object {
                  "marginBottom": 25,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 24,
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              ContactDetails.RemoveTitle
            </Text>
          </View>
          <View>
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "fontWeight": "400",
                  },
                ]
              }
            >
              ContactDetails.RemoveContactMessageTop
            </Text>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 18,
                      "fontWeight": "400",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint1
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 18,
                      "fontWeight": "400",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint2
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 18,
                      "fontWeight": "400",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint3
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 10,
                    "marginVertical": 6,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 9,
                      },
                      undefined,
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 18,
                      "fontWeight": "400",
                    },
                    Object {
                      "flexShrink": 1,
                    },
                  ]
                }
              >
                ContactDetails.RemoveContactsBulletPoint4
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 18,
                    "fontWeight": "400",
                  },
                  Object {
                    "marginTop": 10,
                  },
                ]
              }
            >
              ContactDetails.RemoveContactMessageBottom
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        Array [
          Object {
            "marginBottom": 108,
            "marginHorizontal": 20,
            "marginTop": "auto",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="ContactDetails.RemoveContact"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#42803E",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ConfirmRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              ContactDetails.RemoveContact
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingTop": 10,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Global.Cancel"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderColor": "#42803E",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/CancelRemoveButton"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#42803E",
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "textAlign": "center",
                  },
                  false,
                ]
              }
            >
              Global.Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaView>
</Modal>
`;
